force-app/main/default/objects/SFSSDupeCatcher__Scenario__c/fields/SFSSDupeCatcher__Blocked_Duplicates__c.field-meta.xml
<CustomField>
    <fullName>SFSSDupeCatcher__Blocked_Duplicates__c</fullName>
    <defaultValue>0</defaultValue>
    <description>The number of of duplicates that have been blocked by this filter through a &quot;Do Not Insert&quot;, &quot;Display Matching Records&quot; or &quot;Do not Update&quot; action.</description>
    <inlineHelpText>The number of of duplicates that have been blocked by this filter through a &quot;Do Not Insert&quot;, &quot;Display Matching Records&quot; or &quot;Do not Update&quot; action.</inlineHelpText>
    <label>Blocked Duplicates</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>