force-app/main/default/objects/SFSSDupeCatcher__Scenario__c/fields/SFSSDupeCatcher__Bypass_Security__c.field-meta.xml
<CustomField>
    <fullName>SFSSDupeCatcher__Bypass_Security__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If this field is checked, DupeCatcher will query all of an organization&#39;s lead, contact or account records instead of those visible only to the user entering or updating a record.</description>
    <inlineHelpText>If checked, DupeCatcher checks all records, not just those the user has permissions to view.</inlineHelpText>
    <label>Search All Records</label>
    <type>Checkbox</type>
</CustomField>