force-app/main/default/objects/SFSSDupeCatcher__Scenario__c/fields/SFSSDupeCatcher__Converted_Duplicates__c.field-meta.xml
<CustomField>
    <fullName>SFSSDupeCatcher__Converted_Duplicates__c</fullName>
    <defaultValue>0</defaultValue>
    <description>The number of Duplicates that have been converted to a contact or account by this filter</description>
    <inlineHelpText>The number of Duplicates that have been converted to a contact or account by this filter</inlineHelpText>
    <label>Converted Duplicates</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>