force-app/main/default/objects/SFSSDupeCatcher__Scenario__c/fields/SFSSDupeCatcher__Create_Tasks_for_Warnings__c.field-meta.xml
<CustomField>
    <fullName>SFSSDupeCatcher__Create_Tasks_for_Warnings__c</fullName>
    <description>This field can be used to create tasks whenever a potential duplicate is discovered by the &quot;Report Duplicates&quot; action.</description>
    <inlineHelpText>Indicates whether a task is to be created and who it will be assigned to.</inlineHelpText>
    <label>Create Tasks for Alerts</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes - User</fullName>
            </value>
            <value>
                <fullName>Yes - Filter Owner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>