force-app/main/default/objects/SFSSDupeCatcher__Scenario__c/fields/SFSSDupeCatcher__Deployed__c.field-meta.xml
<CustomField>
    <fullName>SFSSDupeCatcher__Deployed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is used to enable/disable this filter.</description>
    <inlineHelpText>Indicates if a DupeCatcher filter is active.</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>