force-app/main/default/objects/SFSSDupeCatcher__Scenario__c/fields/SFSSDupeCatcher__Duplicate_Warning_Count__c.field-meta.xml
<CustomField>
    <fullName>SFSSDupeCatcher__Duplicate_Warning_Count__c</fullName>
    <description>The number of Duplicate Alerts that have been generated by this filter.</description>
    <inlineHelpText>The number of alerts generated by the filter.</inlineHelpText>
    <label>Duplicate Alert Count</label>
    <summaryForeignKey>SFSSDupeCatcher__Duplicate_Warning__c.SFSSDupeCatcher__Scenario__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>