force-app/main/default/objects/SFSSDupeCatcher__Scenario__c/fields/SFSSDupeCatcher__Error_Message__c.field-meta.xml
<CustomField>
    <fullName>SFSSDupeCatcher__Error_Message__c</fullName>
    <defaultValue>&quot;Click on the links below to view or edit the potential duplicate records.&quot;</defaultValue>
    <description>The error message to be displayed to the user when a &quot;Do Not Insert&#39; action is invoked.</description>
    <inlineHelpText>The user-defined error message to display when a duplicate is identified.</inlineHelpText>
    <label>Error Message</label>
    <type>TextArea</type>
</CustomField>