force-app/main/default/objects/SFSSDupeCatcher__Scenario__c/fields/SFSSDupeCatcher__Match_On_Insert_Action__c.field-meta.xml
<CustomField>
    <fullName>SFSSDupeCatcher__Match_On_Insert_Action__c</fullName>
    <description>This field indicates what DupeBlocker should do when when a user has created a record that it considers to be a potential duplicate.</description>
    <inlineHelpText>The action DupeCatcher takes on identifying a potential duplicate when a new record is inserted.</inlineHelpText>
    <label>Match on Insert Action</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Do Not Insert</fullName>
            </value>
            <value>
                <fullName>Display Matching Records</fullName>
            </value>
            <value>
                <fullName>Do Nothing</fullName>
                <default>true</default>
                <label>Do Nothing</label>
            </value>
            <value>
                <fullName>Report Duplicate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>