force-app/main/default/objects/SFSSDupeCatcher__Scenario__c/fields/SFSSDupeCatcher__Match_On_Update_Action__c.field-meta.xml
<CustomField>
    <fullName>SFSSDupeCatcher__Match_On_Update_Action__c</fullName>
    <description>This field indicates what DupeBlocker should do when when a user has modified a record and it considers it to be a potential duplicate.</description>
    <inlineHelpText>The action DupeCatcher takes on identifying a potential duplicate when a new record is updated.</inlineHelpText>
    <label>Match On Update Action</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Do Not Update</fullName>
            </value>
            <value>
                <fullName>Report Duplicate</fullName>
            </value>
            <value>
                <fullName>Do Nothing</fullName>
                <default>true</default>
                <label>Do Nothing</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>