force-app/main/default/objects/SFSSDupeCatcher__Scenario__c/fields/SFSSDupeCatcher__Merged_Duplicates__c.field-meta.xml
<CustomField>
    <fullName>SFSSDupeCatcher__Merged_Duplicates__c</fullName>
    <defaultValue>0</defaultValue>
    <description>The number of duplicates that have been merged using DupeCatcher</description>
    <inlineHelpText>The number of duplicates that have been merged using DupeCatcher</inlineHelpText>
    <label>Merged Duplicates</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>