force-app/main/default/objects/SFSSDupeCatcher__Scenario__c/fields/SFSSDupeCatcher__Person_Account_Filter__c.field-meta.xml
<CustomField>
    <fullName>SFSSDupeCatcher__Person_Account_Filter__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Filter is for Person Account matching.</inlineHelpText>
    <label>Person Account Filter</label>
    <type>Checkbox</type>
</CustomField>