force-app/main/default/objects/SFSSDupeCatcher__Scenario__c/fields/SFSSDupeCatcher__Potential_Duplicate_Count__c.field-meta.xml
<CustomField>
    <fullName>SFSSDupeCatcher__Potential_Duplicate_Count__c</fullName>
    <description>The number of potential duplicate records that have been generated by DupeCatcher through the &quot;Do Not Insert&quot;, &quot;Do Not Update&quot; and &quot;Display Matching Records&quot; actions.</description>
    <inlineHelpText>The number of potential duplicates that have been identified by this filter.</inlineHelpText>
    <label>Potential Duplicate Count</label>
    <summaryForeignKey>SFSSDupeCatcher__Potential_Duplicate__c.SFSSDupeCatcher__Scenario__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>