force-app/main/default/objects/SFSSDupeCatcher__Scenario__c/fields/SFSSDupeCatcher__Scenario_Rule_Count__c.field-meta.xml
<CustomField>
    <fullName>SFSSDupeCatcher__Scenario_Rule_Count__c</fullName>
    <description>The number of scenario rules that are a part of this filter.</description>
    <inlineHelpText>The number of rules that are part of a the filter.</inlineHelpText>
    <label>Filter Rule Count</label>
    <summaryForeignKey>SFSSDupeCatcher__Scenario_Rule__c.SFSSDupeCatcher__Scenario__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>