force-app/main/default/objects/SFSSDupeCatcher__Scenario__c/fields/SFSSDupeCatcher__Scenario_Type__c.field-meta.xml
<CustomField>
    <fullName>SFSSDupeCatcher__Scenario_Type__c</fullName>
    <description>This indicates the type of records that will be used to match on this filter.</description>
    <inlineHelpText>The record types to compare.</inlineHelpText>
    <label>FilterType</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Lead</fullName>
                <default>true</default>
                <label>Lead</label>
            </value>
            <value>
                <fullName>Lead to Contact</fullName>
            </value>
            <value>
                <fullName>Lead to Account</fullName>
            </value>
            <value>
                <fullName>Contact</fullName>
            </value>
            <value>
                <fullName>Account</fullName>
            </value>
            <value>
                <fullName>Account (Person)</fullName>
            </value>
            <value>
                <fullName>Lead to Account (Person)</fullName>
            </value>
            <value>
                <fullName>Lead (Person)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>