force-app/main/default/objects/SFSSDupeCatcher__Scenario__c/validationRules/SFSSDupeCatcher__PersonAccount_Contact_Filtertype.validationRule-meta.xml
<ValidationRule>
    <fullName>SFSSDupeCatcher__PersonAccount_Contact_Filtertype</fullName>
    <active>true</active>
    <errorConditionFormula>IF(SFSSDupeCatcher__Person_Account_Filter__c, IF(ISPICKVAL(SFSSDupeCatcher__Scenario_Type__c, &quot;Contact&quot;), true, false), false)</errorConditionFormula>
    <errorMessage>&#39;Contact&#39; is not  a valid Filter Type when the Person Account checkbox is checked.</errorMessage>
</ValidationRule>